# project-chimera

./: .gitignore  .gitmodules  CMakeDefs.txt  CMakeFiles.txt  CMakeLists.txt  LICENSE  README.md  READMEv2.md  RENDER.md  chimera.code-workspace  nodes.txt
backup/: README.2023.09.08.md  parallax.fs.glsl
backup/glc/: glc.c
backup/glk/: glk.c
backup/shaders/: deferred_pointligth_01.fs.glsl  deferred_stencil_01.vs.glsl  flat_01.fs.glsl  forward_render_ambient_pass.fs.glsl  motion_blur_color.vs.glsl  normals_01.vs.glsl  particle_01.gs.glsl  shadow_map_01_quad.vs.glsl  shadow_pcf.vs.glsl  silhouette_01.vs.glsl  simple_01.fs.glsl  skinning_01.fs.glsl  skybox_01.fs.glsl  tessellation_02.cs.glsl  tessellation_02.es.glsl  test.vs.c  wireframe_01.vs.glsl
bak/: windows.2018.10.15.7z
bak/glc/: glc.h
bak/glk/: glk.h
bak/morpheus.2014.04.16/: main.cpp  model.h
bak/shaders/: deferred_geometry_01.vs.glsl  direct_light_01.fs.glsl  direct_light_01.vs.glsl  instanced_01.fs.glsl  instanced_01.vs.glsl  lighting_02.fs.glsl  motion_blur_quad.fs.glsl  motion_blur_quad.vs.glsl  null_01.fs.glsl  picking_01.fs.glsl  point_light_01.fs.glsl  shadow_map_01_shadow.fs.glsl  simple_01.vs.glsl  spot_light_01.fs.glsl  spot_light_01.vs.glsl  tessellation_01.vs.glsl  tessellation_02.vs.glsl  wireframe_01.fs.glsl
data/models/: cube.md5mesh  cube.mtl
data/shaders/: billboard_01.fs.glsl  billboard_01.gs.glsl  deferred_directligth_01.vs.glsl  deferred_geometry_01.fs.glsl  forward_render_diffuse_pass.fs.glsl  lighting_01.vs.glsl  normals_01.gs.glsl  quad_01.vs.glsl  shadow_volume.fs.glsl  shadow_volume.gs.glsl  silhouette_01.fs.glsl  silhouette_01.gs.glsl  skybox_01.vs.glsl  tessellation_01.es.glsl  tessellation_01.fs.glsl  tessellation_02.fs.glsl  texture_01.fs.glsl
data/textures/: notfound.dds  notfound.psd  notfound.tga
inc/app/: CApplication.hpp  CController.hpp  CEditWindow.hpp  CGameWindow.hpp  CInputManager.hpp  CLayer.hpp  CMainWindow.hpp  CTool.hpp  CViewport.hpp  app.hpp
inc/cym/: CAnimable.hpp  CAnimation.hpp  CApplication.hpp  CBuffer.hpp  CCamera.hpp  CCanvas.hpp  CCluster.hpp  CCodec.hpp  CCollider.hpp  CController.hpp  CCore.hpp  CDataBuffer.hpp  CDrawable.hpp  CDrawcall.hpp  CEngine.hpp  CError.hpp  CEvent.hpp  CException.hpp  CFile.hpp  CFont.hpp  CFramebuffer.hpp  CFrustum.hpp  CGeometry.hpp  CInstance.hpp  CLayout.hpp  CLight.hpp  CLogger.hpp  CMaterial.hpp  CMesh.hpp  CMessenger.hpp  CModel.hpp  CNode.hpp  CObject.hpp  CPipeline.hpp  CPointer.hpp  CProgram.hpp  CProperty.hpp  CRegistry.hpp  CRenderSystem.hpp  CRenderer.hpp  (+19 more)
inc/glc/: glc.hpp  ogl_1_0.hpp  ogl_1_2.hpp  ogl_1_4.hpp  ogl_3_0.hpp  ogl_3_3.hpp  ogl_4_1.hpp  ogl_4_5.hpp  ogl_common.hpp
inc/glk/: glk.h
inc/gll/: gll.hpp
inc/glm/: CAABB.hpp  CFrustum.hpp  CMatrix.hpp  CPlane.hpp  CQuaterion.hpp  CQuaternion.hpp  CRay.hpp  CRectangle.hpp  CShape.hpp  CTransform.hpp  CVector.hpp  glm.hpp
inc/glo/: CAnimable.hpp  CArray.hpp  CBuffer.hpp  CCamera.hpp  CDrawable.hpp  CDrawcall.hpp  CFrustum.hpp  CLayout.hpp  CObject.hpp  CResource.hpp  CShader.hpp  CTexture.hpp  CUniform.hpp  glo.hpp
inc/gls/: CPlane.hpp  CShape.hpp  gls.hpp
inc/glx/: CBuffer.hpp  CShader.hpp  CUniform.hpp
inc/ogl/: CAnimable.hpp  CArray.hpp  CBuffer.hpp  CCamera.hpp  CCanvas.hpp  CCodec.hpp  CController.hpp  CCore.hpp  CDrawable.hpp  CDrawcall.hpp  CEngine.hpp  CEvent.hpp  CException.hpp  CFile.hpp  CFrustum.hpp  CLayout.hpp  CLight.hpp  CMaterial.hpp  CMesh.hpp  CMessenger.hpp  CModel.hpp  CObject.hpp  CProgram.hpp  CRenderSystem.hpp  CRenderer.hpp  CResource.hpp  CScene.hpp  CShader.hpp  CSystem.hpp  CTerrain.hpp  CTexture.hpp  CTextureLoader.hpp  CUniform.hpp  CVertex.hpp  CVertexArray.hpp  CViewport.hpp  CVolume.hpp  ogl.hpp
inc/sys/: CApplication.hpp  CBlock.hpp  CCollection.hpp  CError.hpp  CException.hpp  CFile.hpp  CLayered.hpp  CLogger.hpp  CMemory.hpp  CParser.hpp  CPointer.hpp  CRegistry.hpp  CSingleton.hpp  CStream.hpp  CTask.hpp  CThreader.hpp  CTimer.hpp  TAssociated.hpp  TBlock.hpp  TClonable.hpp  TPointer.hpp  TSingleton.hpp  sys.hpp
inc/uix/: CApplication.hpp  CBitmap.hpp  CBrush.hpp  CButton.hpp  CCanvas.hpp  CConsole.hpp  CContext.hpp  CControl.hpp  CCursor.hpp  CDialog.hpp  CEvent.hpp  CFont.hpp  CFrame.hpp  CGdio.hpp  CIcon.hpp  CLayout.hpp  CListener.hpp  CLoop.hpp  CModule.hpp  CObject.hpp  CPainter.hpp  CPanel.hpp  CPen.hpp  CPopup.hpp  CRender.hpp  CStyle.hpp  CSurface.hpp  CTimer.hpp  CTitlebar.hpp  CToplevel.hpp  CWidget.hpp  CWindow.hpp  uix.hpp
inc/win/: CWindow.hpp  win.hpp
nfo/: notes.v0.1a.hpp  notes.v0.2a.hpp  notes.v0.3a.cpp  notes.v0.4a.xml  notes.v0.5.flat.xml  notes.v0.5.tree.md  notes.v0.5b.tree.xml  notes.v0.6.tree.xml
notes/: notes.v0.1a.hpp  notes.v0.2a.hpp  notes.v0.2b.cpp  notes.v0.4a.xml  notes.v0.5.flat.xml  notes.v0.5.tree.md  notes.v0.6.tree.xml
res/saves/: save.xml
source/: main.bak  main.cpp
src/: main.cpp
src/glk/: glk.c
(+411 files in other folders)
